--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-virtual": "^3.11.2",
+    "@types/canvas-confetti": "^1.9.0",
+    "@vercel/analytics": "^1.4.1",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
@@ -40,6 +43,7 @@
     "next": "15.1.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
