--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/postcss": "^4.0.1",
     "@types/node": "^20",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
