--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.10",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-virtual": "^3.11.2",
     "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "^1.4.1",
@@ -39,12 +39,13 @@
     "cmdk": "^1.0.4",
     "date-fns": "^3.0.0",
     "framer-motion": "^11.15.0",
+    "jose": "4.14.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-confetti": "^6.2.2",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hotkeys-hook": "^4.6.1",
